--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
     <header>
         <nav>
-            <a href="./index.html">WEBSTUDIO</a>
+            <a href="./index.html">WebStudio</a>
 
             <ul>
                 <li>
@@ -25,37 +25,36 @@
         <address>
             <ul>
                 <li>
-                    <a href="">info@devstudio.com</a>
+                    <a href="mailto:info@devstudio.com">info@devstudio.com</a>
                 </li>
                 <li>
-                    <a href="">+11 (000) 111-11-11</a>
+                    <a href="tel:+110001111111">+11 (000) 111-11-11</a>
                 </li>
             </ul>
         </address>
     </header>
     <main>
         <section>
-            <h1>Effective Solutions
-                for Your Business</h1>
+            <h2>Effective Solutions for Your Business</h2>
             <button type="button">Order Service</button>
         </section>
         
         <section>
             <ul>
                 <li>
-                    <h2>Strategy</h2>
+                    <h3>Strategy</h3>
                     <p>Our goal is to identify the business problem to walk away with the perfect and creative solution.</p>
                 </li>
                 <li>    
-                    <h2>Punctuality</h2>
+                    <h3>Punctuality</h3>
                     <p>Bring the key message to the brand's audience for the best price within the shortest possible time.</p>
                 </li>
                 <li>
-                    <h2>Diligence</h2>
+                    <h3>Diligence</h3>
                     <p>Research and confirm brands that present the strongest digital growth opportunities and minimize risk.</p>
                 </li>
                 <li>
-                    <h2>Technologies</h2>
+                    <h3>Technologies</h3>
                     <p>Design practice focused on digital experiences. We bring forth a deep passion for problem-solving.</p>
                 </li>
             </ul>
@@ -66,36 +65,36 @@
 
             <ul>
                 <li>
-                    <img scr="./images/img-1.jpg" 
-                    width="150"
-                    height="145"
+                    <img src="./images/img-1.jpg" 
+                    width="264"
+                    height="260"
                     alt="Mark Guerrero image" 
                     />
                     <h3>Mark Guerrero</h3>
                     <p>Product Designer</p>
                 </li>   
                 <li>
-                    <img scr="./images/img-2.jpg" 
-                    width="150"
-                    height="145"
+                    <img src="./images/img-2.jpg" 
+                    width="264"
+                    height="260"
                     alt="Tom Ford image" 
                     />
                     <h3>Tom Ford</h3>
                     <p>Frontend Developer</p>
                 </li>
                 <li>
-                    <img scr="./images/img-3.jpg" 
-                    width="150"
-                    height="145"
+                    <img src="./images/img-3.jpg" 
+                    width="264"
+                    height="260"
                     alt="Camila Garcia image" 
                     />
                     <h3>Camila Garcia</h3>
                     <p>Marketing</p>
                 </li>
                 <li>
-                    <img scr="./images/img-4.jpg" 
-                    width="150"
-                    height="145"
+                    <img src="./images/img-4.jpg" 
+                    width="264"
+                    height="260"
                     alt="Daniel Wilson image" 
                     />
                     <h3>Daniel Wilson</h3>
@@ -105,7 +104,7 @@
         </section>
     </main>
     <footer>
-        <h3>WEBSTUDIO</h3>
+        <a href="./index.html">WebStudio</a>
         <p>Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
     </footer>
 </body>
