--- a/index.html
+++ b/index.html
@@ -37,7 +37,8 @@
         <section>
             <h1>Effective Solutions for Your Business</h1>
             <button type="button">Order Service</button>
-            
+        </section>
+
             <ul>
                 <li>
                     <h3>Strategy</h3>
@@ -56,11 +57,11 @@
                     <p>Design practice focused on digital experiences. We bring forth a deep passion for problem-solving.</p>
                 </li>
             </ul>
-        </section>
 
         <section>
             <h2>Our Team</h2>
-
+        </section>
+        <section>
             <ul>
                 <li>
                     <img src="./images/img-1.jpg" 
