--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
         </section>
 
         <section>
+            <h2>Portfolio</h2>
             <ul>
                 <li>
                     <h3>Strategy</h3>
